# dbkp

./: .cobra.yaml  .gitignore  Makefile  README.md  dbkp.json  example-dbkp.json  flake.nix  go.mod  go.sum  main.go  nfpm.yml  pyproject.toml  setup.py
.github/workflows/: build.yml  go.yml
cmd/: add.go  backup.go  init.go  list.go  recipe_args.go  remove.go  restore.go  root.go  version.go
cmd/docgen/: docgen.go
dbkp/: __init__.py  dbkp.py
dbkp.egg-info/: PKG-INFO  SOURCES.txt
pkg/dbkp/: backup.go  config.go  filter.go  recipe_filter.go  restore.go  tarball.go  utils.go
