[tool.poetry]
name = "dbkp"
version = "1.0.1"
description = "Dotfiles backup and restore tool"
authors = ["Álan Crístoffer <acristoffers@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/acristoffers/dbkp"
keywords = ["dotfiles", "backup", "restore", "manager"]

[tool.poetry.scripts]
moirai = 'dbkp.dbkp:main'

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
pydantic = "^1.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
